examples/test/testpolicy4242.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4242
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key27: value10
      key26: value45
      key16: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value26
          key18: value1
      podSelector:
        matchLabels:
          key15: value32
          key43: value16
          key36: value42
